Fix icon size and text align

--- a/src/index.scss
+++ b/src/index.scss
@@ -6,7 +6,7 @@
 	}
 }
 @mixin mobile {
-	@media (min-width: 375px) {
+	@media (min-width: 400px) {
 		@content;
 	}
 }
@@ -97,9 +97,7 @@ html {
 	font-size: calc(1rem + 0.5vw);
 
 	@media (min-width: 1200px) {
-		.title {
-			font-size: 1.5rem;
-		}
+		font-size: 1.5rem;
 	}
 }
 
@@ -121,13 +119,18 @@ html {
 		flex-direction: column;
 		align-items: center;
 		justify-content: center;
-		gap: 8px;
+		text-align: center;
+		gap: 0;
+		margin-top: 16px;
 
-		@include mobile() {
+		@include mobile {
+			gap: 8px;
 			flex-direction: row;
+			text-align: left;
+			margin-top: 0;
 		}
 
-		& icon {
+		& .icon {
 			flex-shrink: 0;
 		}
 	}
